--- a/testcase-migration-core/pom.xml
+++ b/testcase-migration-core/pom.xml
@@ -43,6 +43,11 @@
 			<version>2.12.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>4.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.github.javaparser</groupId>
 			<artifactId>javaparser-core</artifactId>
 			<version>3.18.0</version>
